--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 [dependencies]
 axum = { version = "=0.7.9", optional = true }
 blake3 = { version = "1.7.0", optional = true }
-chrono = { version = "0.4.40", optional = true }
+chrono = { version = "0.4.40", optional = true, features = ["serde"] }
+csv = { version = "1.3.1", optional = true }
 dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
 dioxus-cli-config = "0.6.3"
 futures = { version = "0.3.31", optional = true }
@@ -16,6 +17,7 @@ rusqlite = { version = "0.34.0", optional = true }
 select = { version = "0.6.1", optional = true }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"], optional = true }
+url = { version = "2.5.4", features = ["serde"], optional = true }
 
 [features]
 default = ["server"]
@@ -28,13 +30,17 @@ server = [
     "dep:tokio",
     "dep:rusqlite",
     "dep:chrono",
+    "dep:csv",
     "dep:blake3",
     "dep:select",
+    "dep:url",
     "dep:futures",
 ]
 blake3 = ["dep:blake3"]
 select = ["dep:select"]
 futures = ["dep:futures"]
+csv = ["dep:csv"]
+url = ["dep:url"]
 
 [profile]
 
