--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
 edition = "2024"
 
 [dependencies]
+halres-downloader = { git = "https://github.com/barafael/halres-downloader", optional = true }
+# halres-downloader = { path = "../halres-downloader", optional = true }
+
 axum = { version = "=0.7.9", optional = true }
 blake3 = { version = "1.7.0", optional = true }
 chrono = { version = "0.4.40", optional = true, features = ["serde"] }
@@ -35,6 +38,7 @@ server = [
     "dep:select",
     "dep:url",
     "dep:futures",
+    "dep:halres-downloader",
 ]
 blake3 = ["dep:blake3"]
 select = ["dep:select"]
